--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==0.87.0
+python-dotenv>=0.21.0
+protobuf==3.20.3
+streamlit==1.24.0
 pandas>=1.5.0
 numpy>=1.22.0
-plotly>=6.0.0
+plotly>=5.17.0
 bcrypt>=3.2.0
 Pillow>=9.0.0
-protobuf==3.20.3
-setuptools
-imghdr
+
 
 
 
